--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     </head>
     <body>
         <div class="container">
+          <div class="foto">
+            <h1>SASS  - DRAGON BALL </h1>
+            <h3>Haz click en las esferas!!! </h3>
+          </div>
           <div class="esfera estrella1"><div class="star-five"></div></div>
           <div class="esfera estrella2">
             <div class="star-five"></div>
@@ -30,7 +34,6 @@
             <div class="star-five"></div>
             <div class="star-five"></div>
           </div>
-          <div class="foto"></div>
           <div class="esfera estrella6">
             <div class="star-five"></div>
             <div class="star-five"></div>
@@ -48,7 +51,6 @@
             <div class="star-five"></div>
             <div class="star-five"></div>
           </div>
-          <h1>SASS  - DRAGON BALL </h1>
         </div>
         <script src="http://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
         <script type="text/javascript" src="js/main.js"></script>
